Fix element alignment, spacing, sizing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
 .maindiv{    
     background-color:white;
     color:black;
-    width:300px;
+    width:480px;
     padding:20px;
     border-radius:25px; 
 
@@ -30,11 +30,25 @@ h1{
     flex-direction:column;
 }
 .titlediv {    
-    width:300px;
+    width:600px;
 }
-.subdiv {
-    width:300px;
+.inputdiv {
+    width:330px;
 }
 .footerdiv {
-    width:300px;
+    width:450px;
+}
+
+label {
+    display:inline-block;
+    width: 125px;
+    box-sizing: border-box;
+}
+
+#principal {
+    width: 145px;
+}
+
+#compute {
+    width: 130px;
 }
